# AI_Agents_MATH_Redundant

./: .gitignore  README.md  __init__.py  config.yml  multi_agents.py  pyproject.toml  test_orchestrator.py
configs/: base.yaml  dev.yaml
configs/prompts/: final_reviewer.md  judge.md
scripts/: evaluate_benchmark.py  run_pipeline.py
src/agents/: base.py  final_reviewer.py  judge.py
src/entrypoints/: cli.py
src/evaluation/: metrics.py
src/memory/: artifacts.py  transcript.py
src/schemas/: messages.py
src/tools/: base.py  proof_checker.py
src/utils/: llm_clients.py  settings.py
src/workflows/: orchestrator.py
tests/evaluation/: test_metrics.py
tests/unit/: test_agents_judge.py  test_tools_proof_checker.py
tests/workflow/: test_orchestrator.py
utils/: setup.py
working/: 4_chamdiem.py  Prepare_excel_from_json.ipynb  Preview_RA_before_RUN.ipynb  Test_for_WITH.xlsx  config.yml  config_WITHOUT_RA.yml  data.json  data.xlsx  data50_PROB_WITHOUT_RA.xlsx  data50_PROB_WITH_RA.xlsx  final_reviewer.json  gpt_oss.py  judge.json  mathematician_and_proof_writer.json  multi_agents.py  multi_agents_WITHOUT_RA.py  proof_strategy_planner.json  running_input.json  running_input_Prob_WITHOUT_RA.json  running_input_test.json  test.ipynb  test_PWOUTRA.xlsx  test_evaluation.xlsx  test_for_WITH.xlsx  test_for_WITHOUT_RA.xlsx  test_for_WITH_RA.xlsx  test_proof_review.xlsx  ~$data50_PROB_WITH_RA.xlsx
working/Problem_WITHOUT_RA_v5/: result_task_0.json  result_task_1.json  result_task_10.json  result_task_11.json  result_task_12.json  result_task_13.json  (+44 more)
(+4442 files in other folders)
