[project]
name = "ma-imo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kernels>=0.9.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.32",
    "omegaconf>=2.3.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
