[project]
name = "ma-imo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.11",
    "langchain-openai>=0.3.33",
    "omegaconf>=2.3.0",
    "openai>=1.107.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]
